<resources>
    <string name="app_name">Laba_2</string>
    <string name="registration_button">Регистрация</string>
    <string name="login_edit">Логин</string>
    <string name="password_edit">Пароль</string>
    <string name="entry_button">Войти</string>
    <string name="edit_name">Имя</string>
    <string name="edit_surname">Фамилия</string>
    <string name="edit_second_name">Отчество</string>
    <string name="edit_second_password">Повторите пароль</string>
    <string name="edit_date">Дата рождения</string>
    <string name="button_test">Пройти тест</string>
    <string name="button_rating">Рейтинг</string>
    <string name="button_get_answer">Ответить</string>

    <string name="action_about">О приложении</string>
    <string name="action_exit">Выйти</string>
</resources>
